# Aitextaudioo

./: .env  index.html  package-lock.json  package.json
src/: App.jsx  index.js  main.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: AudioRecorder.jsx  TranscriptionDisplay.jsx
src/services/: DeepgramService.js
