[package]
name = "aitextaudioo"
version = "0.1.0"
description = "Voice-to-text desktop app with Tauri + Deepgram"
authors = ["Your Name"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["shell-open"] }

[profile.release]
opt-level = 3

